<resources>
    <string name="app_name">Sellverse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">Home</string>
    <string name="bids_icon">Bids</string>
    <string name="chat_icon">Chat</string>
    <string name="profile_icon">Profile</string>
    <string name="add_icon">Add</string>
    <string name="content_description_image">Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="btFilter">Filters</string>
    <string name="txSearch">Search</string>
    <string name="lbTime">End date:</string>
    <string name="lbPrice">Current price:</string>

    <string name="price">Initial Price</string>
    <string name="btnCrearCuenta">I don´t have an account</string>

    <string name="btnRegister">Register</string>
    <string name="btnLogin">Log In</string>
    <string name="txtEmail">Email</string>
    <string name="txtName">Name</string>
    <string name="txtSurname">Surname</string>
    <string name="txtPassword">Password</string>

    <string name="coin">Coin</string>
    <string-array name="coins">
        <item>€</item>
        <item>$</item>
        <item>£</item>
    </string-array>
    <string name="program_auction">Program Auction</string>
    <string name="select_the_time">Select the time</string>
    <string name="select_the_day">Select the day</string>
    <string name="now">Now</string>
    <string name="personalized">Personalized</string>
    <string name="select_auction_duration">Select the auction duration</string>
    <string name="day">Days</string>
    <string name="hour">Hours</string>
    <string name="minutes">Mins</string>
    <string name="add">Add</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_message">Are you sure you want to leave your changes will be lost?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_publication">Add Publication</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="info_permissions">To upload a new publication you need to activate the permissions
        to access your camera and storage. </string>
    <string name="open_settings">Open settings</string>
    <string name="not_now">Not now</string>
    <string name="cancel_permission_message">To access this functionality you must accept the permissions</string>
    <string name="new_image">Auction</string>
    <string name="change_image">Change image</string>
    <string name="see_image">See image</string>
    <string name="delete_image">Delete image</string>
    <string name="image">Image</string>
    <string name="todo">TODO</string>
    <string name="prefs_file">com.main.sellverse.PREFERENCE_FILE_KEY</string>
    <string name="txtVerifica">Verify your email!</string>
    <string name="btnVerificado">You are verified</string>
    <string name="txtPhoneNumber">Phone Number</string>
    <string name="txtUsername">Username</string>
    <string name="btnResetPassword">Forgot your password?</string>
    <string name="btnResetPsw">Reset password</string>
    <string name="select_your_username">Write your new username</string>
    <string name="save">Save</string>
    <string name="empty_username">Username cannot be empty</string>
    <string name="repeated_username">There is other user with that username</string>
    <string name="welcome">Welcome to Sellverse!!!</string>
    <string name="lets_start">Lets start</string>
    <string name="log_out">Log out</string>
    <string name="current_price">Current Price: </string>
    <string name="number_of_bids">Number of Bids: </string>
    <string name="time_left">Time left:</string>
    <string name="it_started_on">Started on:</string>
    <string name="make_a_bid">Make a bid:</string>
    <string name="seller">Seller:</string>
    <string name="startAChat">Start a chat</string>
    <string name="enter_the_amount">Enter the amount to bid:</string>
    <string name="make_the_bid">Make the bid</string>
    <string name="price_cannot_be_empty">Price cannot be empty</string>
    <string name="price_is_lower_than_current_price">Amount is lower than current price</string>
    <string name="make_a_bild_add">Make a bild</string>
    <string name="a">TODO</string>
    <string name="you_bid">You bidded:</string>
    <string name="biggest_bid">Biggest bid:</string>
    <string name="your_bids">Bids</string>
    <string name="auction_successfully">Your auction has been added successfully</string>
    <string name="all_done">All done</string>
    <string name="ok">Ok</string>
    <string name="title_cannot_be_empty">Title cannot be Empty</string>
    <string name="description_cannot_be_empty">Description cannot be empty</string>
    <string name="min_one_image">There must be at least one image</string>
    <string name="send">Send</string>
    <string name="txtLoading">Loading...</string>
    <string name="max_length_password">Password must have at least 6 characters</string>
</resources>