<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/tvInfoUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="36dp"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    android:text="@string/select_your_username" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="36dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/teal_200"
                    android:ems="10"
                    android:hint="@string/txtUsername"
                    android:minHeight="48dp"
                    android:textColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/teal_200"
                    android:elevation="5dp"
                    android:text="@string/save"
                    android:textSize="16dp"
                    app:layout_constraintHorizontal_bias="0.631"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>


        </ScrollView>


    </LinearLayout>


</RelativeLayout>