<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scrollAdd"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auction.AuctionInfoActivity">
        <include
            android:id="@+id/toolbar"
            layout="@layout/simple_toolbar"

            />

        <TextView
            android:id="@+id/tvTitleAuction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif"
            android:text="title"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.062" />

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/sliderView"
            android:layout_width="250dp"
            android:layout_marginStart="15dp"
            android:layout_height="250dp"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorSelectedColor="#000000"
            app:sliderScrollTimeInSec="4"
            app:sliderStartAutoCycle="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleAuction"
            app:layout_constraintVertical_bias="0.036" />

        <View
            android:id="@+id/view"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderView"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tvCurrentPrice"
            android:layout_width="332dp"
            android:layout_height="33dp"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.036" />

        <TextView
            android:id="@+id/descriptionAuction"
            android:layout_marginStart="15dp"
            android:layout_width="333dp"
            android:layout_height="122dp"
            android:text="TextView"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentPrice"
            app:layout_constraintVertical_bias="0.025" />

        <View
            android:id="@+id/view2"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionAuction"
            app:layout_constraintVertical_bias="0.05" />

        <View
            android:id="@+id/view3"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStartDateAction" />

        <TextView
            android:id="@+id/numberOfBids"
            android:layout_width="332dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="TextView"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/tvEnddate"
            android:layout_width="332dp"
            android:layout_height="33dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:text="@string/time_left"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberOfBids" />

        <cn.iwgang.countdownview.CountdownView
            android:id="@+id/count"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:elevation="8dp"
            android:textSize="20sp"
            app:isHideTimeBackground="false"
            app:isShowDay="true"
            app:isShowHour="true"
            app:isShowMillisecond="false"
            app:isShowMinute="true"
            app:isShowSecond="true"
            app:isTimeTextBold="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnddate"
            app:suffixDay="d"
            app:suffixGravity="bottom"
            app:suffixHour="h"
            app:suffixMillisecond="ms"
            app:suffixMinute="m"
            app:suffixSecond="s"
            app:suffixTextColor="#000000"
            app:suffixTextSize="12sp"
            app:timeTextColor="#FFFFFF"
            app:timeTextSize="32sp" />

        <TextView
            android:id="@+id/tvStartDateAction"
            android:layout_width="332dp"
            android:layout_height="33dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:text="@string/it_started_on"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/count" />

        <TextView
            android:id="@+id/tvSell"
            android:layout_width="171dp"
            android:layout_height="39dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/seller"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <Button
            android:id="@+id/startAChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#71AE6F"
            android:text="@string/startAChat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.294"
            app:layout_constraintStart_toEndOf="@+id/tvSell"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tvIntroduce"
            android:layout_width="220dp"
            android:layout_height="38dp"
            android:layout_marginTop="36dp"
            android:fontFamily="sans-serif"
            android:text="@string/enter_the_amount"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSell" />

        <EditText
            android:id="@+id/etNumber"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/add"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.237"
            app:layout_constraintStart_toEndOf="@+id/tvIntroduce"
            app:layout_constraintTop_toBottomOf="@+id/startAChat" />

        <Button
            android:id="@+id/btnMakeTheBid"
            android:layout_width="309dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#71AE6F"
            android:text="@string/make_the_bid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIntroduce" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>